src/tests/snapshots/protocols__core__serialize__tests__invalid_lex.snap
---
source: src/core/serialize.rs
expression: content
---
error: Lexing failed: expected integer
  ┌─ tests/misc/invalid_lex.prot:9:8
  │
9 │   step(-1);
  │        ^ Lexing failed: expected integer
